docker compose + jenkinsfiles